<resources>
    <string name="app_name">Cardee</string>
    <string name="facebook_app_id">2052454135080051</string>
    <string name="fb_login_protocol_scheme">fb2052454135080051</string>
    <string name="google_client_id">223677953401-12ltvoram5qhn2bva09bk46fmaopha20.apps.googleusercontent.com</string>
    <string name="app_tagline">Rent cars from nearby fellow peers</string>
    <string name="pickup_cars">Pickup cars around you</string>
    <string name="pickup_desc">Conveniently pickup cars as close as \nyour nearest carpark!</string>
    <string name="signup">Sign Up</string>
    <string name="go_to_signup">Go To Sign Up</string>
    <string name="signup_starter">Hello! Sign up to get started.</string>
    <string name="signup_almost">Almost done!</string>
    <string name="signup_add_photo">Add a photo of yourself!</string>
    <string name="signup_your_photo">Your photo</string>
    <string name="signup_name">What is your name?</string>
    <string name="signup_name_hint">Your Name</string>
    <string name="signup_what_now">What would you like to do now?</string>
    <string name="signup_acc_created_template">Hi %s, your account has been created!</string>
    <string name="signup_as">Login as</string>
    <string name="signup_terms_by">By signing up, you agree to Cardee\'s </string>
    <string name="signup_terms_terms">Terms of Service</string>
    <string name="signup_terms_privacy">Privacy Policy</string>
    <string name="signup_validation_password">Password length must be between 3 and 36.</string>
    <string name="signup_registration_success">You\'re registered successfully!</string>
    <string name="car_renter">Car Renter</string>
    <string name="car_owner">Car Owner</string>
    <string name="pass_check_error">Password require at least 8 characters, and contain at least one letter and one number</string>
    <string name="login_as_renter">Login As Car Renter</string>
    <string name="login_as_owner">Login As Car Owner</string>
    <string name="login_forgot">Forgot your password?</string>
    <string name="login">Log In</string>
    <string name="go_to_login">Go To Login</string>
    <string name="login_process">Logging in…</string>
    <string name="preference_file_key">LOGIN_STORE</string>
    <string name="pass_length_key">PASSWORD_LENGTH</string>
    <string name="social_logged_key">SOCIAL_LOGIN</string>
    <string name="acc_exists">Account already exists</string>
    <string name="send_email_title">Forgot Password</string>
    <string name="send_email_text">Enter your email and we will send you a \nlink to reset your password.</string>
    <string name="send_email_email">Your email address</string>
    <string name="send_email_send">Send Email</string>
    <string name="change_pass_title">Change Password</string>
    <string name="change_pass_text">Enter a new password for your account</string>
    <string name="change_pass_new_pass">New password</string>
    <string name="change_pass_confirm_pass">Confirm new password</string>
    <string name="change_pass_edit_error">This field must be filled, more than 3 characters!</string>
    <string name="change_pass_edit_error_matching">Passwords do not match!</string>
    <string name="change_pass_success">Password changed successfully!</string>
    <string name="error_occurred">An error has occurred!</string>
    <string name="saved_successfully">Saved successfully!</string>
    <string name="nothing_to_save">Nothing to save</string>
    <string name="only_one_image">You able to add only unique image!</string>
    <string name="loading">Loading…</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="yes">Yes</string>
    <string name="email_pass_empty_error">You must fill this field</string>
    <string name="email_empty_error">Email cannot be empty</string>
    <string name="pass_empty_error">Password cannot be empty</string>
    <string name="name_empty_error">Name cannot be empty</string>
    <string name="email_invalid_error">Invalid email format</string>
    <string name="auth_error">Authentication error!</string>
    <string name="auth_wrong_cred">Wrong credentials!</string>
    <string name="auth_facebook">Log in with facebook</string>
    <string name="auth_google">Log in with Google+</string>
    <string name="auth_signup_facebook">Sign up with facebook</string>
    <string name="auth_signup_google">Sign up with Google+</string>
    <string name="menu_item_inbox_title">Inbox</string>
    <string name="menu_item_cars_title">My Cars</string>
    <string name="menu_item_bookings_title">Bookings</string>
    <string name="menu_item_more_title">More</string>
    <string name="menu_item_browse_title">Browse</string>
    <string name="car_list_item_hourly_label">Hourly</string>
    <string name="car_list_item_daily_label">Daily</string>
    <string name="car_availability_title">Set availability by</string>
    <string name="car_availability_one_off">One-Off</string>
    <string name="car_availability_calendar">Calendar</string>
    <string name="car_availability_always">Always Available</string>
    <string name="car_details_tab_rental">Rental Info</string>
    <string name="car_details_tab_car">Car Info</string>
    <string name="car_details_tab_reviews">Reviews</string>
    <string name="car_details_more_listing">View listing</string>
    <string name="car_details_more_delete">Delete car</string>
    <string name="title_my_cars">My Cars</string>
    <string name="title_my_bookings">My Bookings</string>
    <string name="title_owner_car_images">Car Images</string>
    <string name="title_owner_car_specs">Car Info</string>
    <string name="title_owner_car_location">Car Location</string>
    <string name="title_owner_car_description">Car Description</string>
    <string name="toolbar_action_add_car">Add car</string>
    <string name="toolbar_action_options">Options</string>
    <string name="toolbar_action_more">More</string>
    <string name="toolbar_action_save">Save</string>
    <string name="toolbar_action_delete">Delete</string>
    <string name="title_edit">edit</string>
    <string name="set">set</string>
    <string name="rates">rates</string>
    <string name="car_details_location_title">Location</string>
    <string name="car_details_description_title">Description</string>
    <string name="car_add_title">Add Car</string>
    <string name="car_add_submit">Submit</string>
    <string name="car_add_submit_caps">SUBMIT</string>
    <string name="car_add_vehicle">1. Vehicle Type</string>
    <string name="car_add_info">2. Car Info</string>
    <string name="car_add_image">3. Car Image</string>
    <string name="car_add_location">4. Car Location</string>
    <string name="car_add_contact">4. Contact Info</string>
    <string name="car_add_mobile">4. Mobile Number</string>
    <string name="car_add_email">5. Verify Email</string>
    <string name="car_add_payment">6. Payment Account</string>
    <string name="car_add_add">Add</string>
    <string name="car_add_next">Next</string>
    <string name="car_add_save">Save</string>
    <string name="car_add_all_done">All done!</string>
    <string name="car_added_title">Car added!</string>
    <string name="car_added_message">Thank you. Your car is under review and we will respond to you in 24hrs.
        Meanwhile you can start adding your car and rental information!</string>
    <string name="car_added_ok">Ok</string>
    <string name="car_location_address">Where should renter collect the car?</string>
    <string name="car_add_close">Close</string>
    <string name="quick_check">Quick Check</string>
    <string name="car_add_dialog_text">To protect yourself and others against accidents and claims, do ensure your car have the required insurance coverage for unnamed/other drivers before proceeding.
    \n\n
        If unsure, check your policy details or contact your insurer.
        \n\n
        To upgrade your plan to include these coverage, contact your insurer.
    </string>
    <string name="car_add_payment_text_info">Setup your Stripe Account to receive card payment directly to your bank account!</string>
    <string name="setup_stripe_account">Setup Stripe Account</string>
    <string name="learn_more_about_stripe">Learn more about Stripe</string>
    <string name="car_add_vehicle_title">Vehicle Type</string>
    <string name="car_add_vehicle_what">What type of vehicle are you listing?</string>
    <string name="car_add_vehicle_personal">Personal Car</string>
    <string name="car_add_vehicle_personal_expl">Passenger car for personal use</string>
    <string name="car_add_vehicle_private">Private-Hire Car</string>
    <string name="car_add_vehicle_private_expl">Private-hire cars registered for Grab / Uber use.
        \n(Also can be rented out for personal use)</string>
    <string name="car_add_vehicle_commercial">Commercial Vehicle</string>
    <string name="car_add_vehicle_commercial_expl">Pickup, lorry, van, minibus etc.</string>
    <string name="car_add_info_title">Car Info</string>
    <string name="car_add_info_make">Car Make</string>
    <string name="car_add_info_make_hint">E.g. Toyota, Honda, BMW etc.</string>
    <string name="car_add_info_model">Car Model</string>
    <string name="car_add_info_model_hint">E.g. Altis, Camry, Prius etc.</string>
    <string name="car_add_info_year">Year of Manufacture</string>
    <string name="car_add_info_please_select">Please select</string>
    <string name="car_add_info_year_hint">E.g. 2017</string>
    <string name="car_add_info_car_title">Car Title</string>
    <string name="car_add_info_car_title_hint">E.g. Toyota Camry, BMW 3 Hybrid etc.</string>
    <string name="car_add_info_car_title_desc">How you would like your car title to be displayed?
        \nKeep it short! (Do not include year of manufacture)</string>
    <string name="car_add_info_license">License Plate Number</string>
    <string name="car_add_info_license_hint">E.g. SJX8938Y</string>
    <string name="car_add_info_seat_capacity">Seating Capacity</string>
    <string name="car_add_info_eng_capacity">Engine Capacity</string>
    <string name="car_add_info_eng_capacity_litre">litre</string>
    <string name="car_add_info_transmission">Transmission</string>
    <string name="car_add_info_body">Body Type(s)</string>
    <string name="car_add_info_body_desc">Select body type(s) that best describe your car</string>
    <string name="car_add_info_body_sedan">Sedan</string>
    <string name="car_add_info_body_hatchback">Hatchback</string>
    <string name="car_add_info_body_suv">SUV / MPV</string>
    <string name="car_add_info_body_sports">Sports / Coupe</string>
    <string name="car_add_info_body_convertible">+ Convertible</string>
    <string name="error_empty_field">Field(s) must be filled!</string>
    <string name="error_wrong_discounts">Please insert valid discounts</string>
    <string name="done">Done</string>
    <string name="car_add_mobile_header">Enter your mobile number</string>
    <string name="car_add_mobile_subheader">(include country code)</string>
    <string name="car_add_mobile_hint">E.g. +65 8765 4321</string>
    <string name="car_add_mobile_text">A verification code will be sent to this number upon submit</string>
    <string name="booking_state_all">All</string>
    <string name="booking_state_new">New Request</string>
    <string name="booking_state_confirmed">Confirmed</string>
    <string name="booking_state_collected">Handed Over</string>
    <string name="booking_state_collecting">Handing Over</string>
    <string name="booking_state_completed">Completed</string>
    <string name="booking_filter_title">Bookings</string>
    <string name="booking_sort_title">Sort by</string>
    <string name="booking_sort_date">Booking date</string>
    <string name="booking_sort_pickup_date">Pickup date</string>
    <string name="booking_sort_return_date">Return date</string>
    <string name="booking_sort_amount">Booking amount</string>
</resources>