<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <TextView
        android:id="@+id/filter_menu_title"
        style="@style/ModalMenuTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/modal_menu_title_height"
        android:background="@android:color/transparent"
        android:text="@string/booking_filter_title"
        android:textAllCaps="true"
        app:layout_constraintBottom_toTopOf="@+id/booking_filter_all"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <android.support.v7.widget.AppCompatCheckedTextView
        android:id="@+id/booking_filter_all"
        style="@style/ModalMenuItem"
        android:layout_width="match_parent"
        android:layout_height="@dimen/modal_menu_item_height"
        android:background="@drawable/bg_modal_menu_top"
        android:text="@string/booking_state_all"
        app:layout_constraintTop_toBottomOf="@+id/filter_menu_title" />

    <android.support.v7.widget.AppCompatCheckedTextView
        android:id="@+id/booking_filter_new"
        style="@style/ModalMenuItem"
        android:layout_width="match_parent"
        android:layout_height="@dimen/modal_menu_item_height"
        android:background="@drawable/bg_modal_menu_mid"
        android:text="@string/booking_state_new"
        app:layout_constraintTop_toBottomOf="@+id/booking_filter_all" />

    <android.support.v7.widget.AppCompatCheckedTextView
        android:id="@+id/booking_filter_confirmed"
        style="@style/ModalMenuItem"
        android:layout_width="match_parent"
        android:layout_height="@dimen/modal_menu_item_height"
        android:background="@drawable/bg_modal_menu_mid"
        android:text="@string/booking_state_confirmed"
        app:layout_constraintTop_toBottomOf="@+id/booking_filter_new" />

    <android.support.v7.widget.AppCompatCheckedTextView
        android:id="@+id/booking_filter_collecting"
        style="@style/ModalMenuItem"
        android:layout_width="match_parent"
        android:layout_height="@dimen/modal_menu_item_height"
        android:background="@drawable/bg_modal_menu_mid"
        android:text="@string/booking_state_collecting"
        app:layout_constraintTop_toBottomOf="@+id/booking_filter_confirmed" />

    <android.support.v7.widget.AppCompatCheckedTextView
        android:id="@+id/booking_filter_collected"
        style="@style/ModalMenuItem"
        android:layout_width="match_parent"
        android:layout_height="@dimen/modal_menu_item_height"
        android:background="@drawable/bg_modal_menu_mid"
        android:text="@string/booking_state_collected"
        app:layout_constraintTop_toBottomOf="@+id/booking_filter_collecting" />

    <android.support.v7.widget.AppCompatCheckedTextView
        android:id="@+id/booking_filter_completed"
        style="@style/ModalMenuItem"
        android:layout_width="match_parent"
        android:layout_height="@dimen/modal_menu_item_height"
        android:background="@drawable/bg_modal_menu_bottom"
        android:text="@string/booking_state_completed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/booking_filter_collected" />

</android.support.constraint.ConstraintLayout>