<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main">

    <TextView
        android:id="@+id/header"
        style="@style/TextSettingsLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/car_add_mobile_header"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/subheader"
        style="@style/TextSettingsInactive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/car_add_mobile_subheader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/large_margin"
        android:layout_marginStart="@dimen/large_margin"
        android:layout_marginTop="@dimen/medium_margin"
        android:gravity="center_horizontal"
        android:hint="@string/car_add_mobile_hint"
        android:inputType="phone"
        android:maxLength="15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subheader" />

    <TextView
        style="@style/TextSettingsInactive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/large_margin"
        android:layout_marginStart="@dimen/large_margin"
        android:layout_marginTop="@dimen/medium_margin"
        android:gravity="center"
        android:text="@string/car_add_mobile_text"
        android:textColor="@color/add_car_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone" />

</android.support.constraint.ConstraintLayout>